--- a/rijkshuisstijl/sass/components/form/_select.scss
+++ b/rijkshuisstijl/sass/components/form/_select.scss
@@ -70,7 +70,7 @@
     align-items: center;
     overflow: hidden;
     padding: 0 $input-padding-h;
-    z-index: -1;
+    z-index: 0;
   }
 
   &--contrast &__placeholder {
